chore: fix diagram editor in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,6 +122,25 @@
   cursor: move !important;
 }
 
+.dark .react-flow__controls-button {
+  background-color: var(--card);
+  stroke: currentColor;
+  fill: currentColor;
+  border-color: var(--card);
+}
+
+.dark .react-flow__controls-button:hover {
+  background-color: var(--card);
+}
+
+.dark .react-flow__minimap {
+  background-color: var(--background);
+}
+
+.dark .react-flow__minimap-node {
+  fill: var(--card);
+}
+
 .bouncing-dot {
   animation: bouncing-loader 0.6s infinite alternate;
 }
